@@ -31,8 +31,6 @@ THESE SHOULD HAPPEN WITHIN TWO RELEASE ITERATIONS
   context.  presumably that is triggering other code that is failing
   to redraw.
 
-* implement/test the "Blinn blob" method in g_metaball.c
-
 * verify/finish clone mirror support
 
 * address the TODO items in src/mged/clone.c
@@ -40,6 +38,8 @@ THESE SHOULD HAPPEN WITHIN TWO RELEASE ITERATIONS
 * (re)verify rtarea results, fix naming convention
 
 * ADRT: remove MySQL code, fix ISST callbacks, re-enable RISE, cleanup
+
+* fix metaball "shelling" issue
 
 * extend metaball control info beyond simple points
 
@@ -53,8 +53,6 @@ THESE ARE LOWER PRIORITY OR FOR FUTURE RELEASES
   objects, allow deletion/undeletion/hiding/unhiding, provide some
   general means to manipulate the packed and unpacked .g file data for
   performing low-level modifications.
-
-* make z-clipping off by default
 
 * fix the "(type)(size_t)val" hacks (using ints like ptrs, etc)
 
@@ -73,10 +71,6 @@ THESE ARE LOWER PRIORITY OR FOR FUTURE RELEASES
 
 * remove hit_normal and hit_point from struct hit.  add RT_HIT_POINT
   macro.  refactor all callers as needed.
-
-* add option to nirt for reporting the exit point (instead of LOS)
-
-* add option to nirt for reporting the gaps between geometry
 
 * implement graphical crash reporter tool (bombardier)
 
