@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2008-06-XX  Release 7.12.5                                     ---
 ----------------------------------------------------------------------
 
+* add new nirt formatting options, -L listing option - C. Yapp
 * fixed nirt's dest cmd's handling of file name string - Cliff Yapp
 * modified mged nirt command to include air in results - Bob Parker
 
